# diffguard

./: .gitignore  .pre-commit-hooks.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  action-build-constraints.txt  action-runtime-constraints.txt  action.yml  index.html  justfile  llms-ctx.txt  mkdocs.yml  pyproject.toml
.agents/skills/diffguard-closeout/: SKILL.md
.agents/skills/diffguard-closeout/agents/: openai.yaml
.agents/skills/diffguard-closeout/scripts/: run_review.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  publish-to-pypi.yml
adoption-kit/: index.html
agent-integration/: index.html
agents-md-snippet/: index.html
architecture/: index.html
claude-md-snippet/: index.html
cursor-rule-snippet/: index.html
decisions/: index.html
decisions/001-cli-first/: index.html
decisions/002-selective-trigger/: index.html
decisions/003-bsl-1-1-license/: index.html
decisions/004-local-first/: index.html
docs/: adoption-kit.md  agent-integration.md  agents-md-snippet.md  architecture.md  claude-md-snippet.md  cursor-rule-snippet.md  github-copilot-instructions.md  how-it-works.md  index.md  llms-ctx.txt  llms.txt  quickstart.md  real-world-catches.md  roadmap.md  schema.md  validation.md
docs/decisions/: 001-cli-first.md  002-selective-trigger.md  003-bsl-1-1-license.md  004-local-first.md  README.md
examples/: diffguard-workflow.yml
github-copilot-instructions/: index.html
how-it-works/: index.html
quickstart/: index.html
real-world-catches/: index.html
roadmap/: index.html
schema/: index.html
scripts/: ab_oracle_lite.py  build-llms-ctx.sh  validate_corpus.py
search/: search_index.json
src/diffguard/: __init__.py  cli.py  diff.py  git.py  hooks.py  report.py  schema.py
src/diffguard/engine/: __init__.py  _paths.py  _refs.py  _types.py  classifier.py  deps.py  findings.py  matcher.py  parser.py  pipeline.py  signatures.py  summarizer.py
src/diffguard/languages/: __init__.py  _utils.py
src/diffguard/languages/go/: __init__.py  queries.scm
src/diffguard/languages/python/: __init__.py  queries.scm
src/diffguard/languages/typescript/: __init__.py  queries.scm
tests/: ab_test_matrix.md  conftest.py  test_ab_oracle_lite.py  test_action.py  test_classifier.py  test_cli.py  test_closeout_skill.py  test_context_cli.py  test_deps.py  test_diff.py  test_findings.py  test_git.py  test_hooks.py  test_matcher.py  test_parser.py  test_pipeline.py  test_refs.py  test_release_contracts.py  test_report.py  test_richer_categories.py  test_schema.py  test_signatures.py  test_summarizer.py  test_validation_corpus.py
tests/benchmarks/: conftest.py  test_performance.py  test_pipeline_benchmark.py
tests/fixtures/corpus/: contract_cases.json
tests/fixtures/synthetic/: multi_file_refactor.json  signature_change.json  simple_function_add.json
tests/test_languages/: __init__.py  test_go.py  test_python.py  test_typescript.py
validation/: index.html
