[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffguard"
version = "0.1.3"
description = "Catches the structural breaks that pass code review"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "ostehost"}
]
keywords = ["git", "code-review", "ai", "tree-sitter", "code-intelligence", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
diffguard = "diffguard.cli:main"

[project.urls]
Homepage = "https://github.com/ostehost/diffguard"
Repository = "https://github.com/ostehost/diffguard"
Issues = "https://github.com/ostehost/diffguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/diffguard"]

[dependency-groups]
docs = [
    "mkdocs-material>=9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-benchmark",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/diffguard --cov-fail-under=0"
